# contanos

./: README.md  contanos  pyproject.toml  requirements.txt
contanos/: base_worker.py
contanos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contanos/helpers/: create_a_processor.py
contanos/io/: mqtt_input_interface.bk  mqtt_output_interface.py  multi_input_interface.py  rtsp_input_interface.py
contanos/utils/: create_args.py  yaml_config_loader.py
contanos/visualizer/: color_mapper.py  trajectory_drawer.py
projects/: README_DOCKER_SERVICES.md  docker-compose.yml  pose_estimation_config.yaml
projects/base-onnx-gpu-contanos/: Dockerfile
projects/base-onnx-gpu-img/: Dockerfile
projects/prj-annotation-cpu/: Dockerfile.yaml  annotation_main.py  annotation_main_yaml.py  annotation_worker.py
projects/prj-bytetrack-cpu/: Dockerfile  Dockerfile.yaml  bytetrack_main.py  bytetrack_main_yaml.py  bytetrack_worker.py
projects/prj-rtmpose-onnx/: Dockerfile  Dockerfile.yaml  rtmpose_main.py  rtmpose_main_yaml.py
projects/prj-yolox-onnx/: Dockerfile.yaml  yolox_main.py  yolox_main_yaml.py  yolox_worker.py
